just fixed the footer alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,6 @@ blockquote,
 dl,
 dd {
     margin: 0;
-    padding: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
@@ -122,6 +121,7 @@ select {
 
 .instructions {
   display: flex;
+  justify-content: space-around;
   text-align: center;
 }
 
